adjusted styling on pages for better ux on mobile devices

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -17,9 +17,8 @@ Home
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
-        <div class="col">
-            <hr class="hr-peach">
-            <h2 class="logo-font text-peach my-4">Shopping Bag</h2>
+        <div class="col text-center mt-3">
+            <h2 class="logo-font text-peach">Shopping Bag</h2>
             <hr class="hr-peach">
         </div>
     </div>
