--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,7 +23,7 @@ All Products
                         <span class="p-2 mt-2 badge text-peach rounded-pill border-peach">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
-                <hr class="hr-peach w-50 mb-1">
+                <hr class="hr-peach col-10">
             </div>
         </div>
         <div class="row">
