--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -16,16 +16,15 @@ Contact
 {% block content %}
     <div class="overlay"></div>
     <div class="container contact-form-container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8">
-                <hr class="hr-peach">
-                <h2 class="logo-font mb-4 text-peach text-center">Contact Us</h2>
+        <div class="row justify-content-center mt-3">
+            <div class="col-12 col-lg-8">
+                <h2 class="logo-font text-peach text-center">Contact Us</h2>
                 <hr class="hr-peach">
             </div>
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8">
+            <div class="col-12 col-lg-8">
                 <form method="POST" action="{% url 'contact_us' %}" class="form mb-2 text-white">
                     {% csrf_token %}
                     <div class="form-group">
