--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -21,9 +21,8 @@ Profile
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <hr class="hr-peach">
-                <h2 class="logo-font mb-4 text-peach text-center">My Profile</h2>
+            <div class="col mt-3">
+                <h2 class="logo-font text-peach text-center">My Profile</h2>
                 <hr class="hr-peach">
             </div>
         </div>
