--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,7 +17,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="#" id="canine-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Canine
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="canine-items-link">
@@ -28,7 +28,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="#" id="coffee-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Coffee
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="coffee-link">
@@ -39,7 +39,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="{% url 'contact_us' %}">
+            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="{% url 'contact_us' %}" aria-label="Contact Us Link">
                 Contact Us
             </a>
         </li>
