adjusted form id to classes and JS to look for class elements to fix quantity bug after refactoring bag

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -45,6 +45,11 @@ body {
     background: #3C3C3C !important;
 }
 
+.btn-disabled {
+    opacity: 0.5; /* Reduce opacity for disabled buttons */
+    pointer-events: none; /* Disable pointer events for disabled buttons */
+}
+
 .btn-peach-quantity {
     background: #FAB49A;
     color: #3C3C3C !important;
