--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ body {
     background: url('/media/backgroundimage.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    color: #3C3C3C;
     font-family: 'Poppins';
 }
 
