--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -10,13 +10,14 @@ Password Reset
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
-    <hr class="hr-peach">
-    <h2 class="logo-font mb-4 text-peach">{% trans "Password Reset" %}</h2>
-    <hr class="hr-peach">
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+<hr class="hr-peach">
+<h2 class="logo-font mb-4 text-peach">{% trans "Password Reset" %}</h2>
+<hr class="hr-peach">
+
+{% if user.is_authenticated %}
+{% include "account/snippets/already_logged_in.html" %}
+{% endif %}
+
+<p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few
+    minutes.{% endblocktrans %}</p>
 {% endblock %}
