--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -26,88 +26,93 @@ Home
     <div class="row">
         <div class="col">
             {% if bag_items %}
-                <div class="d-block d-md-none">
-                    <div class="row">
-                        <div class="col text-peach">
-                            {% include "bag/bag-total.html" %}
-                        </div>
+            <div class="d-block d-md-none">
+                <div class="row">
+                    <div class="col text-peach">
+                        {% include "bag/bag-total.html" %}
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            {% include "bag/checkout-buttons.html" %}
-                            <p class="text-white text-sm mb-5">A summary of your bag contents is below</p>
-                        </div>
-                    </div>
-                    {% for item in bag_items %}
-                        <div class="row">
-                            <div class="col-12 col-sm-6 mb-2">
-                                {% include "bag/product-image.html" %}
-                            </div>
-                            <div class="col-12 col-sm-6 mb-2">
-                                {% include "bag/product-info.html" %}
-                            </div>
-                            <div class="col-12 col-sm-6 order-sm-last text-peach">
-                                <p class="my-0">Price Each: <span class="text-white">${{ item.product.price }}</span></p>
-                                <p><strong>Subtotal:</strong> <span class="text-white">${{ item.product.price  | calc_subtotal:item.quantity }}</span></p>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                {% include "bag/quantity-form.html" %}
-                            </div>
-                        </div>
-                        <div class="row"><div class="col"><hr class="hr-peach"></div></div>
-                    {% endfor %}
                 </div>
-                <div class="table-responsive rounded d-none d-md-block">
-                    <table class="table table-sm table-borderless">
-                        <thead class="text-peach">
-                            <tr>
-                                <th scope="col">Product Info</th>
-                                <th scope="col"></th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Qty</th>
-                                <th scope="col">Subtotal</th>
-                            </tr>
-                        </thead>
+                <div class="row">
+                    <div class="col">
+                        {% include "bag/checkout-buttons.html" %}
+                        <p class="text-white text-sm mb-5">A summary of your bag contents is below</p>
+                    </div>
+                </div>
+                {% for item in bag_items %}
+                <div class="row">
+                    <div class="col-12 col-sm-6 mb-2">
+                        {% include "bag/product-image.html" %}
+                    </div>
+                    <div class="col-12 col-sm-6 mb-2">
+                        {% include "bag/product-info.html" %}
+                    </div>
+                    <div class="col-12 col-sm-6 order-sm-last text-peach">
+                        <p class="my-0">Price Each: <span class="text-white">${{ item.product.price }}</span></p>
+                        <p><strong>Subtotal:</strong> <span
+                                class="text-white">${{ item.product.price  | calc_subtotal:item.quantity }}</span></p>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        {% include "bag/quantity-form.html" %}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <hr class="hr-peach">
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="table-responsive rounded d-none d-md-block">
+                <table class="table table-sm table-borderless">
+                    <thead class="text-peach">
+                        <tr>
+                            <th scope="col">Product Info</th>
+                            <th scope="col"></th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Qty</th>
+                            <th scope="col">Subtotal</th>
+                        </tr>
+                    </thead>
 
-                        {% for item in bag_items %}
-                            <tr>
-                                <td class="p-3 w-25">
-                                    {% include "bag/product-image.html" %}
-                                </td>
-                                <td class="py-3">
-                                    {% include "bag/product-info.html" %}
-                                </td>
-                                <td class="py-3 text-white">
-                                    <p class="my-0">${{ item.product.price }}</p>
-                                </td>
-                                <td class="py-3 w-25 text-white">
-                                    {% include "bag/quantity-form.html" %}
-                                </td>
-                                <td class="py-3 text-white">
-                                    <p class="my-0">${{ item.product.price  | calc_subtotal:item.quantity }}</p>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        <tr>
-                            <td colspan="5" class="pt-5 text-right text-peach">
-                                {% include "bag/bag-total.html" %}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="5" class="text-right">
-                                {% include "bag/checkout-buttons.html" %}
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+                    {% for item in bag_items %}
+                    <tr>
+                        <td class="p-3 w-25">
+                            {% include "bag/product-image.html" %}
+                        </td>
+                        <td class="py-3">
+                            {% include "bag/product-info.html" %}
+                        </td>
+                        <td class="py-3 text-white">
+                            <p class="my-0">${{ item.product.price }}</p>
+                        </td>
+                        <td class="py-3 w-25 text-white">
+                            {% include "bag/quantity-form.html" %}
+                        </td>
+                        <td class="py-3 text-white">
+                            <p class="my-0">${{ item.product.price  | calc_subtotal:item.quantity }}</p>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <td colspan="5" class="pt-5 text-right text-peach">
+                            {% include "bag/bag-total.html" %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="5" class="text-right">
+                            {% include "bag/checkout-buttons.html" %}
+                        </td>
+                    </tr>
+                </table>
+            </div>
             {% else %}
-                <p class="lead mb-5 text-peach">Your bag is empty.</p>
-                <a href="{% url 'products' %}" class="btn btn-outline-black text-peach rounded-pill btn-lg">
-                    <span class="icon">
-                        <i class="fas fa-chevron-left"></i>
-                    </span>
-                    <span class="text-uppercase">Keep Shopping</span>
-                </a>
+            <p class="lead mb-5 text-peach">Your bag is empty.</p>
+            <a href="{% url 'products' %}" class="btn btn-outline-black text-peach rounded-pill btn-lg">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+            </a>
             {% endif %}
         </div>
     </div>
@@ -117,8 +122,8 @@ Home
 {% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript">
-    $('.btt-link').click(function(e) {
-        window.scrollTo(0,0)
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0)
     })
 </script>
 
@@ -126,22 +131,24 @@ Home
 
 <script type="text/javascript">
     // Update quantity on click
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
         form.submit();
     })
 
     // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken,};
+        var data = {
+            'csrfmiddlewaretoken': csrfToken,
+        };
 
         $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
+            .done(function () {
+                location.reload();
+            });
     })
 </script>
 {% endblock %}
