--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,5 +1,7 @@
 {% if item.product.image %}
-<img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}" style="max-width: 96px; width: 100%; height: auto;">
+<img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}"
+    style="max-width: 96px; width: 100%; height: auto;">
 {% else %}
-<img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}" style="max-width: 96px; width: 100%; height: auto;">
+<img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}"
+    style="max-width: 96px; width: 100%; height: auto;">
 {% endif %}
