--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -5,104 +5,110 @@ All Products
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
-                    {% if product.image %}
-                        <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" style="max-width: 380px">
-                        </a>
-                        {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}" style="max-width: 380px">
-                        </a>
+<div class="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+            <div class="image-container my-5">
+                {% if product.image %}
+                <a href="{{ product.image.url }}" target="_blank">
+                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}"
+                        style="max-width: 380px">
+                </a>
+                {% else %}
+                <a href="">
+                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}"
+                        style="max-width: 380px">
+                </a>
+                {% endif %}
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="product-details-container mb-5 mt-md-5 text-peach">
+                <p class="mb-0">
+                    <h3>{{ product.name }}</h3>
+                </p>
+                <p class="lead mb-0 text-left text-white">${{ product.price }}</p>
+                {% if product.category %}
+                <p class="small mt-1 mb-0">
+                    <a class="text-white small" href="{% url 'products' %}?category={{ product.category.name }}">
+                        <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                    </a>
+                </p>
+                {% endif %}
+                {% if request.user.is_superuser %}
+                <small class="ml-3 text-white small">
+                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                </small>
+                {% endif %}
+                <div class="wishlist">
+                    {% if user.is_authenticated %}
+                    {% if in_wishlist %}
+                    <a href="#" class="wishlist-action already-in-wishlist text-peach" disabled>
+                        <i class="fas fa-heart"></i> Already in wishlist
+                    </a>
+                    {% else %}
+                    <a href="{% url 'add_to_wishlist' product.id %}" class="wishlist-action add-to-wishlist text-peach">
+                        <i class="far fa-heart"></i> Add to wishlist
+                    </a>
+                    {% endif %}
                     {% endif %}
                 </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5 text-peach">
-                    <p class="mb-0"><h3>{{ product.name }}</h3></p>
-                    <p class="lead mb-0 text-left text-white">${{ product.price }}</p>
-                    {% if product.category %}
-                    <p class="small mt-1 mb-0">
-                        <a class="text-white small" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                        </a>
-                    </p>
-                    {% endif %}
-                    {% if request.user.is_superuser %}
-                        <small class="ml-3 text-white small">
-                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                        </small>
-                    {% endif %}
-                    <div class="wishlist">
-                        {% if user.is_authenticated %}
-                            {% if in_wishlist %}
-                                <a href="#" class="wishlist-action already-in-wishlist text-peach" disabled>
-                                    <i class="fas fa-heart"></i> Already in wishlist
-                                </a>
-                            {% else %}
-                                <a href="{% url 'add_to_wishlist' product.id %}" class="wishlist-action add-to-wishlist text-peach">
-                                    <i class="far fa-heart"></i> Add to wishlist
-                                </a>
-                            {% endif %}
-                        {% endif %}
-                    </div>  
-                    <p class="mt-3 text-white">{{ product.description|safe }}</p>
-                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
-                                <p class="mt-3 text-peach"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-peach rounded-0" aria-label="decrement quantity"
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus text-black"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
-                                            name="quantity" value="1" min="1" max="99" 
-                                            data-item_id="{{ product.id }}" 
-                                            aria-label="quantity amount">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-peach rounded-0" aria-label="increment quantity"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus text-black"></i>
-                                                </span>
-                                            </button>
-                                        </div>
+                <p class="mt-3 text-white">{{ product.description|safe }}</p>
+                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3 text-peach"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-peach rounded-0"
+                                            aria-label="decrement quantity" data-item_id="{{ product.id }}"
+                                            id="decrement-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-minus text-black"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
+                                        name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}"
+                                        aria-label="quantity amount">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-peach rounded-0"
+                                            aria-label="increment quantity" data-item_id="{{ product.id }}"
+                                            id="increment-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-plus text-black"></i>
+                                            </span>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill mt-5">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-peach rounded-pill text-uppercase mt-5" value="Add to Bag">
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
-                    </form>                    
-                    <!-- <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        <div class="col-12">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill mt-5">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <input type="submit" class="btn btn-peach rounded-pill text-uppercase mt-5"
+                                value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
+                <!-- <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
@@ -144,10 +150,10 @@ All Products
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
                     </form> -->
-                </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
