--- a/profiles/templates/profiles/wishlist.html
+++ b/profiles/templates/profiles/wishlist.html
@@ -6,80 +6,89 @@ Profile
 {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
+<link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col text-center mt-3">
-                <h2 class="logo-font text-peach">wishlist</h2>
-                <hr class="hr-peach">
-            </div>
+<div class="overlay"></div>
+<div class="container">
+    <div class="row">
+        <div class="col text-center mt-3">
+            <h2 class="logo-font text-peach">wishlist</h2>
+            <hr class="hr-peach">
         </div>
-        <div class="row">
-            <div class="col">
-                {% if wishlist_items %}
-                    <div class="d-block d-md-none">
-                        {% for item in wishlist_items %}
-                            <div class="row">
-                                <div class="col-12 col-sm-6 mb-2">
-                                    {% include "profiles/wishlist-image-mobile.html" %}
-                                </div> 
-                                <div class="col-12 col-sm-6">
-                                    <p class="my-0 text-peach">Name:</p>{% include "profiles/wishlist-name.html" %}
-                                    <p class="my-0 text-peach">Price:</p><span class="text-white">${{ item.product.price }}</span>
-                                    <p class="my-0 text-peach">Added:</p><span class="text-white">{{ item.added_at|date:"d F, Y" }}</span>
-                                    {% include "profiles/wishlist-action.html" %}
-                                </div> 
-                                <div class="col-12 mb-2">
-                                    <hr class="hr-peach">
-                                </div> 
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <div class="table-responsive rounded d-none d-md-block">
-                        <table class="table table-sm table-borderless">
-                            <thead>
-                                <tr class="text-peach">
-                                    <th scope="col">Image</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Date Added</th>
-                                    <th scope="col" class="text-center">Action</th>
-                                </tr>
-                            </thead>
-
-                            {% for item in wishlist_items %}
-                                <tr class="text-white">
-                                    <td class="p-3">
-                                        {% include "profiles/wishlist-image.html" %}
-                                    </td>
-                                    <td class="py-3 my-0">
-                                        {% include "profiles/wishlist-name.html" %}
-                                    </td>
-                                    <td class="py-3"><p class="my-0">${{ item.product.price }}</p></td>
-                                    <td class="py-3"><p class="my-0">{{ item.added_at|date:"d F, Y" }}</p></td>
-                                    <td class="py-3 my-0 text-center">
-                                        {% include "profiles/wishlist-action.html" %}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% else %}
-                    <div class="text-white text-center"><h2><p>Your Wishlist Is Empty<br>To Add Products Visit A Product Page And<br>Click "Add to Wishlist"</p></h2></div>
-                {% endif %}
-            </div>
-        </div>  
     </div>
+    <div class="row">
+        <div class="col">
+            {% if wishlist_items %}
+            <div class="d-block d-md-none">
+                {% for item in wishlist_items %}
+                <div class="row">
+                    <div class="col-12 col-sm-6 mb-2">
+                        {% include "profiles/wishlist-image-mobile.html" %}
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <p class="my-0 text-peach">Name:</p>{% include "profiles/wishlist-name.html" %}
+                        <p class="my-0 text-peach">Price:</p><span class="text-white">${{ item.product.price }}</span>
+                        <p class="my-0 text-peach">Added:</p><span
+                            class="text-white">{{ item.added_at|date:"d F, Y" }}</span>
+                        {% include "profiles/wishlist-action.html" %}
+                    </div>
+                    <div class="col-12 mb-2">
+                        <hr class="hr-peach">
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="table-responsive rounded d-none d-md-block">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr class="text-peach">
+                            <th scope="col">Image</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Date Added</th>
+                            <th scope="col" class="text-center">Action</th>
+                        </tr>
+                    </thead>
+
+                    {% for item in wishlist_items %}
+                    <tr class="text-white">
+                        <td class="p-3">
+                            {% include "profiles/wishlist-image.html" %}
+                        </td>
+                        <td class="py-3 my-0">
+                            {% include "profiles/wishlist-name.html" %}
+                        </td>
+                        <td class="py-3">
+                            <p class="my-0">${{ item.product.price }}</p>
+                        </td>
+                        <td class="py-3">
+                            <p class="my-0">{{ item.added_at|date:"d F, Y" }}</p>
+                        </td>
+                        <td class="py-3 my-0 text-center">
+                            {% include "profiles/wishlist-action.html" %}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+            {% else %}
+            <div class="text-white text-center">
+                <h2>
+                    <p>Your Wishlist Is Empty<br>To Add Products Visit A Product Page And<br>Click "Add to Wishlist"</p>
+                </h2>
+            </div>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
