--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -11,21 +11,22 @@ Password Reset
 
 {% block inner_content %}
 
-    <hr class="hr-peach">
-    <h2 class="logo-font mb-4 text-peach">{% trans "Password Reset" %}</h2>
-    <hr class="hr-peach">
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+<hr class="hr-peach">
+<h2 class="logo-font mb-4 text-peach">{% trans "Password Reset" %}</h2>
+<hr class="hr-peach">
+{% if user.is_authenticated %}
+{% include "account/snippets/already_logged_in.html" %}
+{% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+<p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-pill" href="{% url 'account_login' %}">Back to Login</a>
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+<form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <a class="btn btn-outline-black rounded-pill" href="{% url 'account_login' %}">Back to Login</a>
+    <input type="submit" value="{% trans 'Reset My Password' %}" />
+</form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+<p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
