added footer and styling, enabled user to click into product details via name of product from product page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,6 +11,24 @@ body {
     font-family: 'Poppins', sans-serif !important;
 }
 
+/* Footer */
+
+/* Matthew James Taylor Bottom Footer */
+#flex-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+#flex-container>footer {
+    margin-top: auto;
+}
+
+.page-footer {
+    background-color: #3C3C3C;
+    border-top: 1px solid #FAB49A;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -218,6 +236,9 @@ a.category-badge>span.badge:hover {
 .remove-item {
     cursor: pointer;
 }
+
+
+
 
 /* ----------------------------- bootstrap toasts */
 .message-container {
