--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -81,7 +81,10 @@ All Products
                         </a>
                         {% endif %}
                         <div class="card-body pb-0 bg-custom">
-                            <p class="mb-0 text-peach">{{ product.name }}</p>
+                            <a class="text-peach" href="{% url 'product_detail' product.id %}">
+                                <p class="mb-0 product-name text-peach">{{ product.name }}</p>
+                            </a>
+                            
                         </div>
                         <div class="card-footer bg-custom pt-0 border-0 text-left">
                             <div class="row">
@@ -132,8 +135,8 @@ All Products
     </div>
 </div>
 <div class="btt-button shadow-sm rounded-circle border-peach">
-    <a class="btt-link d-flex h-100">
-        <i class="fas fa-arrow-up text-peach mx-auto my-auto"></i>
+    <a class="btt-link d-flex h-100 text-peach">
+        <i class="fas fa-arrow-up mx-auto my-auto"></i>
     </a>
 </div>
 {% endblock %}
