--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,4 +1,5 @@
-<a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill btn-lg mb-2">
+<a href="{% url 'products' %}?category=dog_toys,dog_treats,coffee_beans,coffee_pre_ground,coffee_accessories"
+    class="btn btn-outline-black rounded-pill btn-lg mb-2">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
     </span>
