--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -203,7 +203,8 @@ Checkout Success
                 <span class="text-uppercase">Back to Profile</span>
             </a>
             {% else %}
-            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill my-2">
+            <a href="{% url 'products' %}?category=dog_toys,dog_treats,coffee_beans,coffee_pre_ground,coffee_accessories"
+                class="btn btn-outline-black rounded-pill my-2">
                 <span class="icon mr-2">
                     <i class="fas fa-gifts"></i>
                 </span>
