--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block extra_title %}
-All Products
+Product Details
 {% endblock %}
 
 {% block page_header %}
@@ -96,7 +96,8 @@ All Products
                             </div>
                         </div>
                         <div class="col-12">
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill mt-5">
+                            <a href="{% url 'products' %}?category=dog_toys,dog_treats,coffee_beans,coffee_pre_ground,coffee_accessories"
+                                class="btn btn-outline-black rounded-pill mt-5">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
@@ -108,48 +109,6 @@ All Products
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
-                <!-- <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
-                                <p class="mt-3 text-peach"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-peach rounded-0" aria-label="decrement quantity"
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus text-black"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99" 
-                                            data-item_id="{{ product.id }}" 
-                                            id="id_qty_{{ product.id }}" aria-label="quantity amount">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-peach rounded-0" aria-label="increment quantity"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus text-black"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill mt-5">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-peach rounded-pill text-uppercase mt-5" value="Add to Bag">
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        </div>
-                    </form> -->
             </div>
         </div>
     </div>
