--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -59,7 +59,8 @@ All Products
                     <p class="text-white mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
                         <span class="small text-peach-nav"><a class="text-peach-nav"
-                                href="{% url 'products' %}">Products Home</a> | </span>
+                                href="{% url 'products' %}?category=dog_toys,dog_treats,coffee_beans,coffee_pre_ground,coffee_accessories">Products
+                                Home</a> | </span>
                         {% endif %}
                         {{ products|length }} Products{% if search_term %} found for <strong
                             class="text-peach">"{{ search_term }}"</strong>{% endif %}
@@ -84,7 +85,7 @@ All Products
                             <a class="text-peach" href="{% url 'product_detail' product.id %}">
                                 <p class="mb-0 product-name text-peach">{{ product.name }}</p>
                             </a>
-                            
+
                         </div>
                         <div class="card-footer bg-custom pt-0 border-0 text-left">
                             <div class="row">
