--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,6 +18,7 @@ Profile
 {% endblock %}
 
 {% block content %}
+
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
@@ -32,7 +33,7 @@ Profile
             <form action="{% url 'profile' %}" method="POST" class="mt-3" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-outline-black rounded-pill text-uppercase float-right">Update
+                <button class="btn btn-outline-black rounded-pill text-uppercase float-right mb-2">Update
                     Information</button>
             </form>
         </div>
@@ -62,7 +63,7 @@ Profile
                                 <ul class="list-unstyled text-white">
                                     {% for item in order.lineitems.all %}
                                     <li class="small">
-                                        {{ item.product.name }} x{{ item.quantity }}
+                                        {{ item.product.name }} x {{ item.quantity }}
                                     </li>
                                     {% endfor %}
                                 </ul>
@@ -75,9 +76,10 @@ Profile
             </div>
         </div>
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
 
-    {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
-    {% endblock %}
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+{% endblock %}
