--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -48,7 +48,7 @@
     </li>
     <li class="list-inline-item">
         <a class="{% if grand_total %}text-peach-nav font-weight-bold{% else %}text-peach-nav{% endif %} nav-link d-block d-lg-none"
-            href="{% url 'view_bag' %}">
+            href="{% url 'view_bag' %}" id="bag-options">
             <div class="text-center">
                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                 <p class="my-0">
