more readme and adjustments to checkout success, base html and main nav

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -38,7 +38,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="coffee-link">
                 <a href="{% url 'products' %}?category=coffee_beans,coffee_pre_ground" class="dropdown-item">Coffee
                     Beans &amp; Pre-Ground</a>
-                <a href="{% url 'products' %}?category=coffee_accessories" class="dropdown-item">Coffee Accessoriess</a>
+                <a href="{% url 'products' %}?category=coffee_accessories" class="dropdown-item">Coffee Accessories</a>
                 <a href="{% url 'products' %}?category=coffee_beans,coffee_pre_ground,coffee_accessories"
                     class="dropdown-item">All Coffee</a>
             </div>
