--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -208,7 +208,7 @@ Checkout Success
                 <span class="icon mr-2">
                     <i class="fas fa-gifts"></i>
                 </span>
-                <span class="text-uppercase">Now check out the latest deals!</span>
+                <span class="text-uppercase">Continue Shopping</span>
             </a>
             {% endif %}
         </div>
