--- a/templates/base.html
+++ b/templates/base.html
@@ -54,144 +54,147 @@
 
 <body>
     <div id="flex-container">
-    <header class="container-fluid fixed-top">
-        <div id="topnav" class="row bg-custom pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link logo-link">
-                    <img src="https://woof-and-bean-ci-m4.s3.amazonaws.com/media/wblogo.png" width="44" height="40"
-                        class="d-inline-block align-top" alt="woof and bean dog logo">
-                    <span class="logo-font text-logo my-0"><strong>Woof</strong> & <strong>Bean</strong></span>
-                </a>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="{% url 'products' %}">
-                    <div class="input-group w-100 position-relative">
-                        <input class="form-control search-bar rounded-pill pr-5" type="text" name="q"
-                            placeholder="Search our site">
-                        <div class="input-group-append position-absolute">
-                            <button class="form-control btn btn-search rounded-pill" aria-label="search-button"
-                                type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                    <li class="list-inline-item dropdown">
-                        <a href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                            class="text-peach-nav nav-link">
-                            <div class="text-center">
-                                <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
+        <header class="container-fluid fixed-top">
+            <div id="topnav" class="row bg-custom pt-lg-2 d-none d-lg-flex">
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                    <a href="{% url 'home' %}" class="nav-link main-logo-link logo-link">
+                        <img src="https://woof-and-bean-ci-m4.s3.amazonaws.com/media/wblogo.png" width="44" height="40"
+                            class="d-inline-block align-top" alt="woof and bean dog logo">
+                        <span class="logo-font text-logo my-0"><strong>Woof</strong> & <strong>Bean</strong></span>
+                    </a>
+                </div>
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                    <form method="GET" action="{% url 'products' %}">
+                        <div class="input-group w-100 position-relative">
+                            <input class="form-control search-bar rounded-pill pr-5" type="text" name="q"
+                                placeholder="Search our site">
+                            <div class="input-group-append position-absolute">
+                                <button class="form-control btn btn-search rounded-pill" aria-label="search-button"
+                                    type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
                             </div>
-                        </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenticated %}
-                            {% if request.user.is_superuser %}
-                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                            {% endif %}
-                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'wishlist' %}" class="dropdown-item">Wishlist</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                            {% endif %}
                         </div>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-peach-nav font-weight-bold{% else %}text-peach-nav{% endif %} nav-link"
-                            href="{% url 'view_bag' %}">
-                            <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                <p class="my-0">
-                                    {% if grand_total %}
-                                    ${{ grand_total|floatformat:2 }}
-                                    {% else %}
-                                    $0.00
-                                    {% endif %}
-                                </p>
+                    </form>
+                </div>
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                    <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                        <li class="list-inline-item dropdown">
+                            <a href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false" class="text-peach-nav nav-link">
+                                <div class="text-center">
+                                    <div><i class="fas fa-user fa-lg"></i></div>
+                                    <p class="my-0">My Account</p>
+                                </div>
+                            </a>
+                            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                                {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                                {% endif %}
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'wishlist' %}" class="dropdown-item">Wishlist</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                {% endif %}
                             </div>
-                        </a>
-                    </li>
-                </ul>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="{% if grand_total %}text-peach-nav font-weight-bold{% else %}text-peach-nav{% endif %} nav-link"
+                                href="{% url 'view_bag' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                    <p class="my-0">
+                                        {% if grand_total %}
+                                        ${{ grand_total|floatformat:2 }}
+                                        {% else %}
+                                        $0.00
+                                        {% endif %}
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="row bg-custom">
-            <nav class="navbar navbar-expand-lg navbar-light w-100">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
-                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><i class="fa-solid fa-bars"></i></span>
-                </button>
-                {% include 'includes/mobile-top-header.html' %}
-                {% include 'includes/main-nav.html' %}
-            </nav>
-        </div>
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-peach text-black">
-                <h4 class="logo-font my-1 text-white">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
+            <div class="row bg-custom">
+                <nav class="navbar navbar-expand-lg navbar-light w-100">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                        aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span><i class="fa-solid fa-bars"></i></span>
+                    </button>
+                    {% include 'includes/mobile-top-header.html' %}
+                    {% include 'includes/main-nav.html' %}
+                </nav>
             </div>
-        </div>
-    </header>
+            <div id="delivery-banner" class="row text-center">
+                <div class="col bg-peach">
+                    <h4 class="logo-font my-1 text-white">Free delivery on orders over ${{ free_delivery_threshold }}!
+                    </h4>
+                </div>
+            </div>
+        </header>
 
-    {% if messages %}
-    <div class="class message-container">
-        {% for message in messages %}
-        {% with message.level as level %}
-        {% if level == 40 %}
-        {% include 'includes/toasts/toast_error.html' %}
-        {% elif level == 30 %}
-        {% include 'includes/toasts/toast_warning.html' %}
-        {% elif level == 25 %}
-        {% include 'includes/toasts/toast_success.html' %}
-        {% else %}
-        {% include 'includes/toasts/toast_info.html' %}
+        {% if messages %}
+        <div class="class message-container">
+            {% for message in messages %}
+            {% with message.level as level %}
+            {% if level == 40 %}
+            {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+            {% include 'includes/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
+            {% include 'includes/toasts/toast_success.html' %}
+            {% else %}
+            {% include 'includes/toasts/toast_info.html' %}
+            {% endif %}
+            {% endwith %}
+            {% endfor %}
+        </div>
         {% endif %}
-        {% endwith %}
-        {% endfor %}
-    </div>
-    {% endif %}
 
-    {% block page_header %}
-    {% endblock %}
+        {% block page_header %}
+        {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
-    {% block footer %}
-    <!-- Footer -->
+        {% block footer %}
+        <!-- Footer -->
         <footer class="page-footer small">
             <div class="row container-fluid">
                 <!-- Copyright -->
-                <div class="col footer-copyright text-left small py-3 ml-md-5 ml-3 text-white">
+                <div class="col footer-copyright text-left small py-3 ml-md-5 ml-3 text-white"
+                    aria-label="Copyright date 2024">
                     © 2024 Copyright:
-                    <a class="text-peach" href="https://github.com/ThomasBallardCI" target="_blank"> 
+                    <a class="text-peach" href="https://github.com/ThomasBallardCI" target="_blank"
+                        aria-label="Copyright link to gihub for Thomas Ballard">
                         Thomas Ballard
                     </a>
                 </div>
                 <!-- Copyright -->
                 <div class="col text-right py-3 small">
                     <!-- Facebook -->
-                    <a class="fb-ic" href="https://facebook.com" target="_blank">
+                    <a class="fb-ic" href="https://facebook.com" target="_blank" aria-label="facebok icon link">
                         <i class="fab fa-facebook-f fa-lg mr-md-5 mr-3 fa-2x text-peach"> </i>
                     </a>
                     <!-- Twitter -->
-                    <a class="tw-ic" href="https://twitter.com" target="_blank">
+                    <a class="tw-ic" href="https://twitter.com" target="_blank" aria-label="twitter icon link">
                         <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x text-peach"> </i>
                     </a>
                     <!--Instagram-->
-                    <a class="ins-ic" href="https://instagram.com" target="_blank">
+                    <a class="ins-ic" href="https://instagram.com" target="_blank" aria-label="instagram icon link">
                         <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x text-peach"> </i>
                     </a>
                 </div>
             </div>
         </footer>
     </div>
-    {% endblock %}    
+    {% endblock %}
 
     {% block postloadjs %}
     <script type="text/javascript">
