adjustments after w3 nu validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -168,8 +168,7 @@
         <footer class="page-footer small">
             <div class="row container-fluid">
                 <!-- Copyright -->
-                <div class="col footer-copyright text-left small py-3 ml-md-5 ml-3 text-white"
-                    aria-label="Copyright date 2024">
+                <div class="col footer-copyright text-left small py-3 ml-md-5 ml-3 text-white">
                     © 2024 Copyright:
                     <a class="text-peach" href="https://github.com/ThomasBallardCI" target="_blank"
                         aria-label="Copyright link to gihub for Thomas Ballard">
@@ -197,7 +196,7 @@
     {% endblock %}
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
         $('.toast').toast('show');
     </script>
     {% endblock %}
