adjusted link for home shop now to correct all products

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@ Home
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' %}"
+                    <a href="{% url 'products' %}?category=dog_toys,dog_treats,coffee_beans,coffee_pre_ground,coffee_accessories"
                         class="shop-now-button btn btn-lg rounded-pill text-uppsercase py-3"><strong>SHOP
                             NOW</strong></a>
                 </h4>
